APEX-260: Email us view

--- a/config/apextoolgroup/default/core.entity_form_display.block_content.featured_links.default.yml
+++ b/config/apextoolgroup/default/core.entity_form_display.block_content.featured_links.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - block_content.type.featured_links
     - field.field.block_content.featured_links.body
+    - field.field.block_content.featured_links.field_is_it_for_warranty_page
     - field.field.block_content.featured_links.field_quick_links
   module:
     - paragraphs
@@ -13,6 +14,13 @@ targetEntityType: block_content
 bundle: featured_links
 mode: default
 content:
+  field_is_it_for_warranty_page:
+    type: boolean_checkbox
+    weight: 26
+    region: content
+    settings:
+      display_label: true
+    third_party_settings: {  }
   field_quick_links:
     type: paragraphs
     weight: 2
