--- a/config/apextoolgroup/default/core.entity_view_display.node.brands.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.brands.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.brands.field_all_markets
     - field.field.node.brands.field_banner_image
     - field.field.node.brands.field_brand_color
+    - field.field.node.brands.field_brand_order_for_brand_list
     - field.field.node.brands.field_business_unit
     - field.field.node.brands.field_claim_to_fame
     - field.field.node.brands.field_end_users
@@ -172,5 +173,6 @@ content:
     weight: 1
     region: content
 hidden:
+  field_brand_order_for_brand_list: true
   langcode: true
   search_api_excerpt: true
