--- a/config/apextoolgroup/default/core.entity_view_display.node.brands.teaser.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.brands.teaser.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.brands.field_all_markets
     - field.field.node.brands.field_banner_image
     - field.field.node.brands.field_brand_color
+    - field.field.node.brands.field_brand_order_for_brand_list
     - field.field.node.brands.field_business_unit
     - field.field.node.brands.field_claim_to_fame
     - field.field.node.brands.field_end_users
@@ -47,6 +48,7 @@ hidden:
   field_all_markets: true
   field_banner_image: true
   field_brand_color: true
+  field_brand_order_for_brand_list: true
   field_business_unit: true
   field_claim_to_fame: true
   field_end_users: true
