--- a/config/apextoolgroup/default/views.view.brands_catalog.yml
+++ b/config/apextoolgroup/default/views.view.brands_catalog.yml
@@ -1077,6 +1077,20 @@ display:
           text: view
           output_url_as_text: true
           absolute: false
+      sorts:
+        field_brand_order_for_brand_list_value:
+          id: field_brand_order_for_brand_list_value
+          table: node__field_brand_order_for_brand_list
+          field: field_brand_order_for_brand_list_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: standard
+          order: ASC
+          expose:
+            label: ''
+            field_identifier: ''
+          exposed: false
       filters:
         status:
           id: status
@@ -1403,6 +1417,7 @@ display:
           1: AND
       defaults:
         fields: false
+        sorts: false
         filters: false
         filter_groups: false
       display_description: ''
@@ -1805,6 +1820,20 @@ display:
           text: view
           output_url_as_text: true
           absolute: false
+      sorts:
+        field_brand_order_for_brand_list_value:
+          id: field_brand_order_for_brand_list_value
+          table: node__field_brand_order_for_brand_list
+          field: field_brand_order_for_brand_list_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: standard
+          order: ASC
+          expose:
+            label: ''
+            field_identifier: ''
+          exposed: false
       filters:
         status:
           id: status
@@ -2135,6 +2164,7 @@ display:
       defaults:
         title: false
         fields: false
+        sorts: false
         filters: false
         filter_groups: false
       display_description: ''
@@ -2532,6 +2562,20 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+      sorts:
+        field_brand_order_for_brand_list_value:
+          id: field_brand_order_for_brand_list_value
+          table: node__field_brand_order_for_brand_list
+          field: field_brand_order_for_brand_list_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: standard
+          order: ASC
+          expose:
+            label: ''
+            field_identifier: ''
+          exposed: false
       filters:
         status:
           id: status
@@ -2862,6 +2906,7 @@ display:
       defaults:
         title: false
         fields: false
+        sorts: false
         filters: false
         filter_groups: false
       display_description: ''
