--- a/config/apextoolgroup/default/views.view.warranty_page.yml
+++ b/config/apextoolgroup/default/views.view.warranty_page.yml
@@ -1,21 +1,18 @@
-uuid: 122dfe72-287f-49ec-9df3-2ca35f20a9c0
+uuid: a824f26d-d814-4fef-b4e0-b2b7cd476ee2
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.body
-    - node.type.faq
+    - block_content.type.featured_links
   module:
-    - node
-    - text
-    - user
-id: faq
-label: FAQ
+    - block_content
+id: warranty_page
+label: 'Warranty Page'
 module: views
 description: ''
 tag: ''
-base_table: node_field_data
-base_field: nid
+base_table: block_content_field_data
+base_field: id
 display:
   default:
     id: default
@@ -23,80 +20,17 @@ display:
     display_plugin: default
     position: 0
     display_options:
-      title: FAQ
+      title: Warranty
       fields:
-        title:
-          id: title
-          table: node_field_data
-          field: title
+        info:
+          id: info
+          table: block_content_field_data
+          field: info
           relationship: none
           group_type: group
           admin_label: ''
-          entity_type: node
-          entity_field: title
-          plugin_id: field
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: false
-            ellipsis: false
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: false
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-        body:
-          id: body
-          table: node__body
-          field: body
-          relationship: none
-          group_type: group
-          admin_label: ''
+          entity_type: null
+          entity_field: info
           plugin_id: field
           label: ''
           exclude: false
@@ -131,7 +65,7 @@ display:
           element_class: ''
           element_label_type: ''
           element_label_class: ''
-          element_label_colon: false
+          element_label_colon: true
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
@@ -140,7 +74,7 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
-          type: text_default
+          type: string
           settings: {  }
           group_column: value
           group_columns: {  }
@@ -153,7 +87,7 @@ display:
           separator: ', '
           field_api_classes: false
       pager:
-        type: full
+        type: mini
         options:
           offset: 0
           items_per_page: 10
@@ -162,8 +96,6 @@ display:
           tags:
             next: ››
             previous: ‹‹
-            first: First
-            last: Last
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -172,7 +104,6 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          quantity: 9
       exposed_form:
         type: basic
         options:
@@ -184,34 +115,20 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       access:
-        type: perm
-        options:
-          perm: 'access content'
+        type: none
+        options: {  }
       cache:
         type: tag
         options: {  }
       empty: {  }
-      sorts:
-        field_weight_value:
-          id: field_weight_value
-          table: node__field_weight
-          field: field_weight_value
-          relationship: none
-          group_type: group
-          admin_label: ''
-          plugin_id: standard
-          order: ASC
-          expose:
-            label: ''
-            field_identifier: ''
-          exposed: false
+      sorts: {  }
       arguments: {  }
       filters:
         status:
           id: status
-          table: node_field_data
+          table: block_content_field_data
           field: status
-          entity_type: node
+          entity_type: block_content
           entity_field: status
           plugin_id: boolean
           value: '1'
@@ -220,31 +137,71 @@ display:
             operator: ''
             operator_limit_selection: false
             operator_list: {  }
-        type:
-          id: type
-          table: node_field_data
-          field: type
-          entity_type: node
-          entity_field: type
-          plugin_id: bundle
-          value:
-            faq: faq
+        reusable:
+          id: reusable
+          table: block_content_field_data
+          field: reusable
+          entity_type: block_content
+          entity_field: reusable
+          plugin_id: boolean
+          value: '1'
           expose:
             operator_limit_selection: false
             operator_list: {  }
+        type:
+          id: type
+          table: block_content_field_data
+          field: type
+          entity_type: block_content
+          entity_field: type
+          plugin_id: bundle
+          value:
+            featured_links: featured_links
+          expose:
+            operator_limit_selection: false
+            operator_list: {  }
+        field_is_it_for_warranty_page_value:
+          id: field_is_it_for_warranty_page_value
+          table: block_content__field_is_it_for_warranty_page
+          field: field_is_it_for_warranty_page_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: boolean
+          operator: '='
+          value: '1'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            operator_limit_selection: false
+            operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
       style:
         type: default
-        options:
-          grouping: {  }
-          row_class: ''
-          default_row_class: true
       row:
-        type: fields
-        options:
-          default_field_elements: true
-          inline: {  }
-          separator: ''
-          hide_empty: false
+        type: 'entity:block_content'
       query:
         type: views_query
         options:
@@ -254,7 +211,6 @@ display:
           replica: false
           query_tags: {  }
       relationships: {  }
-      css_class: faq-listing
       header: {  }
       footer: {  }
       display_extenders: {  }
@@ -264,25 +220,20 @@ display:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url.query_args
-        - 'user.node_grants:view'
-        - user.permissions
-      tags:
-        - 'config:field.storage.node.body'
-  faq_listing:
-    id: faq_listing
-    display_title: Page
+      tags: {  }
+  warranty:
+    id: warranty
+    display_title: Warranty
     display_plugin: page
     position: 1
     display_options:
+      display_description: ''
       display_extenders: {  }
-      path: faq
+      path: contact-us/warranty
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
         - url.query_args
-        - 'user.node_grants:view'
-        - user.permissions
-      tags:
-        - 'config:field.storage.node.body'
+      tags: {  }
