--- a/config/apextoolgroup/default/core.entity_view_display.node.faq.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.faq.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.faq.body
+    - field.field.node.faq.field_weight
     - node.type.faq
   module:
     - text
@@ -19,6 +20,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 101
+    region: content
+  field_weight:
+    type: number_integer
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    weight: 102
     region: content
   links:
     settings: {  }
