--- a/config/apextoolgroup/default/core.entity_view_display.node.faq.teaser.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.faq.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.faq.body
+    - field.field.node.faq.field_weight
     - node.type.faq
   module:
     - text
@@ -28,5 +29,6 @@ content:
     weight: 100
     region: content
 hidden:
+  field_weight: true
   langcode: true
   search_api_excerpt: true
