--- a/config/apextoolgroup/default/views.view.faq.yml
+++ b/config/apextoolgroup/default/views.view.faq.yml
@@ -23,7 +23,7 @@ display:
     display_plugin: default
     position: 0
     display_options:
-      title: FAQ
+      title: FAQs
       fields:
         title:
           id: title
