APEX-247: Leadership changes

--- a/config/apextoolgroup/default/block.block.leadership.yml
+++ b/config/apextoolgroup/default/block.block.leadership.yml
@@ -1,6 +1,6 @@
 uuid: bb4bcd5b-bcc6-4a48-b513-e18d3cca6d06
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - fixed_block_content.fixed_block_content.leadership
