--- a/config/apextoolgroup/default/core.entity_view_display.block_content.image_block.default.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.block_content.image_block.default.yml
@@ -6,21 +6,33 @@ dependencies:
     - block_content.type.image_block
     - field.field.block_content.image_block.body
     - field.field.block_content.image_block.field_image
+    - image.style.about_footer
+  module:
+    - media
+    - text
 id: block_content.image_block.default
 targetEntityType: block_content
 bundle: image_block
 mode: default
 content:
+  body:
+    type: text_default
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    weight: 1
+    region: content
   field_image:
-    type: entity_reference_entity_view
+    type: media_thumbnail
     label: hidden
     settings:
-      view_mode: embed
-      link: false
+      image_link: ''
+      image_style: about_footer
+      image_loading:
+        attribute: lazy
     third_party_settings: {  }
     weight: 0
     region: content
 hidden:
-  body: true
   langcode: true
   search_api_excerpt: true
