--- a/config/apextoolgroup/default/core.entity_view_display.node.slider.teaser.yml
+++ b/config/apextoolgroup/default/core.entity_view_display.node.slider.teaser.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.slider.field_banner_image
     - field.field.node.slider.field_footer_note
     - field.field.node.slider.field_slider_link
+    - field.field.node.slider.field_weight
     - node.type.slider
   module:
     - user
@@ -26,5 +27,6 @@ hidden:
   field_banner_image: true
   field_footer_note: true
   field_slider_link: true
+  field_weight: true
   langcode: true
   search_api_excerpt: true
