--- a/config/sata_us/default/user.role.customer_support.yml
+++ b/config/sata_us/default/user.role.customer_support.yml
@@ -1,16 +1,16 @@
-uuid: 87d6a916-0227-4a7a-8aa1-aa003f785b81
+uuid: 02b6546f-7bcc-4721-9dda-650fc98c3602
 langcode: en
 status: true
 dependencies:
   module:
     - admin_toolbar_search
+    - sata_us_migrations
     - toolbar
-    - webform
 id: customer_support
 label: 'Customer Support'
 weight: 5
 is_admin: null
 permissions:
   - 'access toolbar'
-  - 'administer webform submission'
+  - 'administer webform customer support'
   - 'use admin toolbar search'
