Apex-241: Site map page add banner.

--- a/config/apextoolgroup/default/sitemap.settings.yml
+++ b/config/apextoolgroup/default/sitemap.settings.yml
@@ -1,6 +1,6 @@
 _core:
   default_config_hash: xu0yG13sSQJcXrOJJqsn44W_hUWAIFHVlphrzxT2ycU
-page_title: Sitemap
+page_title: 'Site Map'
 message:
   value: ''
   format: plain_text
