--- a/config/apex-tools/default/migrate_plus.migration.at_product_classifications_level_four.yml
+++ b/config/apex-tools/default/migrate_plus.migration.at_product_classifications_level_four.yml
@@ -1,9 +1,9 @@
-uuid: cc135512-cd87-4025-93f9-0f20a96c0553
+uuid: cdf56ecd-0f59-4046-942d-ee15790c294c
 langcode: en
 status: true
 dependencies: {  }
 _core:
-  default_config_hash: vpekrXIHGdpRFxcK8sC5QvRVfKugYB9lQxKqWiUtQ_s
+  default_config_hash: VWvOhwlSoX_vq4UGxFnmJL-enkHxEN6AR_LIPOYtoMA
 id: at_product_classifications_level_four
 class: null
 field_plugin_method: null
@@ -69,6 +69,11 @@ process:
     source: term_position
     set_default_value: 1
     default_value: 0
+  field_product_display_order:
+    plugin: at_get_default_value
+    source: term_position
+    set_default_value: 1
+    default_value: 0
   parent:
     -
       plugin: at_get_classification_parent_term
@@ -80,7 +85,7 @@ process:
   langcode:
     plugin: default_value
     default_value: en
-  field_category_image:
+  field_classification_image:
     plugin: at_map_classification_image
     source: remote_classification_image
     migration_instance: at_product_media
