--- a/config/apex-tools/default/migrate_plus.migration.at_product_classifications_level_four_de.yml
+++ b/config/apex-tools/default/migrate_plus.migration.at_product_classifications_level_four_de.yml
@@ -1,9 +1,9 @@
-uuid: 43f0ce01-3fdc-4fe1-b90b-a3973061d17c
+uuid: 0f373957-3b07-44a4-978d-bdaeefd9e621
 langcode: en
 status: true
 dependencies: {  }
 _core:
-  default_config_hash: zzn0SZ_nlUT9j-oBD7kiTdWJOKNgunSOCbRSNCOF6oo
+  default_config_hash: xxeZrRG0SHtHW-qklpr3ax9lnGWmH6aMkyIksxCVLt0
 id: at_product_classifications_level_four_de
 class: null
 field_plugin_method: null
@@ -69,6 +69,11 @@ process:
     source: term_position
     set_default_value: 1
     default_value: 0
+  field_product_display_order:
+    plugin: at_get_default_value
+    source: term_position
+    set_default_value: 1
+    default_value: 0
   parent:
     -
       plugin: at_get_classification_parent_term
@@ -80,7 +85,7 @@ process:
   langcode:
     plugin: default_value
     default_value: de
-  field_category_image:
+  field_classification_image:
     plugin: at_map_classification_image
     source: remote_classification_image
     migration_instance: at_product_media_de
