--- a/docroot/modules/custom/at_migrations/config/install/migrate_plus.migration.at_product_classifications_level_one_gb.yml
+++ b/docroot/modules/custom/at_migrations/config/install/migrate_plus.migration.at_product_classifications_level_one_gb.yml
@@ -58,11 +58,16 @@ process:
     source: term_position
     set_default_value: 1
     default_value: 0
+  field_product_display_order:
+    plugin: at_get_default_value
+    source: term_position
+    set_default_value: 1
+    default_value: 0
   langcode:
     plugin: default_value
     default_value: gb
   #Process for image.
-  field_category_image:
+  field_classification_image:
     plugin: at_map_classification_image
     source: remote_classification_image
     migration_instance: at_product_media_gb
