feature/APEX-568: AT-news-listing

--- a/config/apex-tools/default/core.entity_view_display.node.article.full.yml
+++ b/config/apex-tools/default/core.entity_view_display.node.article.full.yml
@@ -1,8 +1,9 @@
-uuid: 94148210-b005-4ac0-aad2-5d62bfb02bb0
+uuid: 04514223-a465-4f75-a278-18cf4b22ed83
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.full
     - field.field.node.article.body
     - field.field.node.article.field_mailing_list_form
     - field.field.node.article.field_media_kit
@@ -16,10 +17,10 @@ dependencies:
     - user
 _core:
   default_config_hash: ChmU3AVqDKU32A_fyChG0W9dTRKmVBR58B6OClCLvZI
-id: node.article.default
+id: node.article.full
 targetEntityType: node
 bundle: article
-mode: default
+mode: full
 content:
   body:
     type: text_default
