APS-18: Removing extra mailing address field from warranty abusers webform, config ignore typo changes for warranty replacement config

--- a/config/gearwrench/default/config_ignore.settings.yml
+++ b/config/gearwrench/default/config_ignore.settings.yml
@@ -8,5 +8,5 @@ ignored_config_entities:
   - 'search_api.server.acquia_search_server:backend_config.connector_config'
   - 'webform.webform.*'
   - ~webform.webform.warranty_abusers
-  - ~webform.webform.warranty_replacement_form.yml
+  - ~webform.webform.warranty_replacement_form
   - 'gearwrench.settings:cookiebot_cbid'
