--- a/config/crescenttool/default/config_ignore.settings.yml
+++ b/config/crescenttool/default/config_ignore.settings.yml
@@ -6,5 +6,5 @@ ignored_config_entities:
   - 'search_api.server.acquia_search_server:backend_config.connector_config'
   - 'webform.webform.*'
   - ~webform.webform.warranty_abusers
-  - ~webform.webform.warranty_replacement_form.yml
+  - ~webform.webform.warranty_replacement_form
   - 'crescenttool.settings:cookiebot_cbid'
